# python-etl-pipeline

./: .gitignore  Makefile  README.md  config.yaml  env-example.txt  main.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  config.py
src/extract/: __init__.py  api_extractor.py  base_extractor.py  billboard_extractor.py  csv_extractor.py  extractor_orchestrator.py  kaggle_extractor.py  lastfm_extractor.py
src/load/: README.md  __init__.py  base_loader.py  csv_loader.py  data_loader.py  database_schema.py  json_loader.py  loader_orchestrator.py  music_loader.py  music_schema.py  sql_loader.py
src/transform/: __init__.py  audio_enricher.py  base_transformer.py  data_cleaner.py  data_validator.py  feature_engineer.py  music_cleaner.py  music_feature_engineer.py  transformer_orchestrator.py
tests/: test_audio_enricher.py  test_music_cleaner.py  test_music_feature_engineer.py  test_music_schema.py
