[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "python-etl-pipeline"
version = "1.0.0"
description = "Modular ETL pipeline framework supporting COVID-19 and music data pipelines"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
